# astrology-mcp-puchai

./: .env.example  .gitignore  README.md  RENDER_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  create-collections.py  pyproject.toml  render.yaml  render_start.py  requirements.txt  vercel.json
api/: index.py
mcp-bearer-token/: puch-astro-mcp.py  puch_astro_mcp.py
n8n/: astro-mcp.json
